--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
       "<rootDir>/src/**/?(*.)(spec|test).{js,jsx}"
     ],
     "testEnvironment": "jsdom",
-    "testURL": "http://localhost",
+    "testURL":"http://127.0.0.1:8080",
     "transform": {
       "^.+\\.(js|jsx)$": "<rootDir>/node_modules/babel-jest",
       "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
